syntax = "proto3";

package LibrarySync;

service BookSync {
  rpc AddBook(stream AddBookRequest) returns (AddBookResponse);
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
  rpc UpdateBook(stream UpdateBookRequest) returns (UpdateBookResponse);
}

message AddBookRequest {
  oneof type {
    string name = 1;
    bytes chunk = 2;
  }
}

message AddBookResponse {

}

message DeleteBookRequest {
  string path = 1;
}

message DeleteBookResponse {}

message UpdateBookRequest {
  bytes chunk = 1;
  uint32 index = 2;
  string path = 3;
}

message UpdateBookResponse {}
